Stric user permissions and hide secrets.

--- a/airflow/files/config.cfg
+++ b/airflow/files/config.cfg
@@ -114,7 +114,15 @@ expose_config = {{ server.get("expose_config", False) }}
 # Set to true to turn on authentication:
 # http://pythonhosted.org/airflow/installation.html#web-authentication
 authenticate = {{ server.auth.enabled|python }}
+
+{%- if server.auth.enabled and server.auth.engine == "password" %}
 auth_backend = airflow.contrib.auth.backends.password_auth
+
+[admin]
+# UI to hide sensitive variable fields when set to True
+hide_sensitive_variable_fields = True
+{%- endif %}
+
 
 # Filter the list of dags by owner name (requires authentication to be enabled)
 filter_by_owner = False
