Add airflow flower and support changing fernet key.

--- a/airflow/files/supervisor.conf
+++ b/airflow/files/supervisor.conf
@@ -16,7 +16,7 @@ autorestart=true
 
 {% endif %}
 
-{% if service.name == "scheduler" %}
+{% if service.name == "airflow_scheduler" %}
 
 [program:{{ service.type }}_{{ service.name }}]
 directory=/srv/airflow
@@ -29,13 +29,26 @@ autorestart=true
 
 {% endif %}
 
-{% if service.name == "worker" %}
+{% if service.name == "airflow_worker" %}
 
 [program:{{ service.type }}_{{ service.name }}]
 directory=/srv/airflow
 command=/srv/airflow/bin/start-service.sh "airflow worker"
 stdout_logfile=/var/log/airflow/worker.log
 stderr_logfile=/var/log/airflow/worker_error.log
+user=airflow
+autostart=true
+autorestart=true
+
+{% endif %}
+
+{% if service.name == "airflow_flower" %}
+
+[program:{{ service.type }}_{{ service.name }}]
+directory=/srv/airflow
+command=/srv/airflow/bin/start-service.sh "airflow flower"
+stdout_logfile=/var/log/airflow/flower.log
+stderr_logfile=/var/log/airflow/flower_error.log
 user=airflow
 autostart=true
 autorestart=true
