--- a/airflow/files/config.cfg
+++ b/airflow/files/config.cfg
@@ -68,7 +68,7 @@ load_examples = False
 plugins_folder = {{ server.dir.home }}/plugins
 
 # Secret key to save connection passwords in the db
-fernet_key = aiPaiWiengaixeibehieg3iepoo7tei4Yaete4xe
+fernet_key = {{ server.get("fernet_key", "Vei9die5ahbei2UtohS6theeb3Quaewo9aeH5ooh") }}
 
 # Whether to disable pickling dags
 donot_pickle = False
@@ -99,7 +99,7 @@ web_server_port = {{ server.bind.get("port", 8080) }}
 web_server_worker_timeout = 120
 
 # Secret key used to run your flask app
-secret_key = {{ server.get("secret", "shei0Poh9jobiu1cheng2shusoghai2ChaiGh2Me") }}
+secret_key = {{ server.get("secret_key", "shei0Poh9jobiu1cheng2shusoghai2ChaiGh2Me") }}
 
 # Number of workers to run the Gunicorn web server
 workers = {{ server.web_workers.number }}
@@ -203,7 +203,7 @@ scheduler_heartbeat_sec = 5
 # The scheduler can run multiple threads in parallel to schedule dags.
 # This defines how many threads will run. However airflow will never
 # use more threads than the amount of cpu cores available.
-max_threads = 2
+max_threads = 8
 
 [mesos]
 # Mesos master address which MesosExecutor will connect to.
