Support sentry logging.

--- a/airflow/files/config.cfg
+++ b/airflow/files/config.cfg
@@ -30,7 +30,9 @@ executor = CeleryExecutor
 # SqlAlchemy supports many different database engine, more information
 # their website
 sql_alchemy_conn = {{ server.database.engine }}+{{ server.database.get("driver", "psycopg2") }}://{{ server.database.user }}:{{ server.database.password }}@{{ server.database.host }}/{{ server.database.name }}
-
+{%- if server.logging is defined and server.logging.engine == "sentry" %}
+sentry_dsn = {{ server.logging.dsn }}
+{%- endif %}
 
 # The SqlAlchemy pool size is the maximum number of database connections
 # in the pool.
