Fix dag folder.

--- a/airflow/files/config.cfg
+++ b/airflow/files/config.cfg
@@ -6,7 +6,7 @@ airflow_home = {{ server.dir.home }}
 
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository
-dags_folder = {{ server.dir.home }}/app/dags
+dags_folder = {{ server.dir.home }}/dags
 
 # The folder where airflow should store its log files. This location
 base_log_folder = /var/log/airflow
