--- a/airflow/files/config.cfg
+++ b/airflow/files/config.cfg
@@ -2,7 +2,7 @@
 
 [core]
 # The home folder for airflow, default is ~/airflow
-airflow_home = {{ server.dir.home }}
+airflow_home = {{ server.dir.home }}/app
 
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository
