Fix plugin dir.

--- a/airflow/files/config.cfg
+++ b/airflow/files/config.cfg
@@ -67,7 +67,7 @@ max_active_runs_per_dag = 16
 load_examples = False
 
 # Where your Airflow plugins are stored
-plugins_folder = {{ server.dir.home }}/plugins
+plugins_folder = {{ server.dir.home }}/app/plugins
 
 # Secret key to save connection passwords in the db
 fernet_key = {{ server.get("fernet_key", "OtXU8zXeFhi88TgVlJKn5_chhrtbUkgc4QQjg5Wfijk=") }}
