--- a/airflow/files/supervisor.conf
+++ b/airflow/files/supervisor.conf
@@ -5,7 +5,7 @@
 
 {%- if service.name == "airflow" %}
 
-[program:{{ service.type }}_{{ service.name }}]
+[program:{{ service.name }}]
 directory=/srv/airflow
 command=/srv/airflow/bin/start-service.sh "airflow webserver"
 stdout_logfile=/var/log/airflow/web.log
@@ -18,7 +18,7 @@ autorestart=true
 
 {% if service.name == "airflow_scheduler" %}
 
-[program:{{ service.type }}_{{ service.name }}]
+[program:{{ service.name }}]
 directory=/srv/airflow
 command=/srv/airflow/bin/start-service.sh "airflow scheduler"
 stdout_logfile=/var/log/airflow/scheduler.log 
@@ -31,7 +31,7 @@ autorestart=true
 
 {% if service.name == "airflow_worker" %}
 
-[program:{{ service.type }}_{{ service.name }}]
+[program:{{ service.name }}]
 directory=/srv/airflow
 command=/srv/airflow/bin/start-service.sh "airflow worker"
 stdout_logfile=/var/log/airflow/worker.log
@@ -44,7 +44,7 @@ autorestart=true
 
 {% if service.name == "airflow_flower" %}
 
-[program:{{ service.type }}_{{ service.name }}]
+[program:{{ service.name }}]
 directory=/srv/airflow
 command=/srv/airflow/bin/start-service.sh "airflow flower"
 stdout_logfile=/var/log/airflow/flower.log
