Add ability to run two worker at same machine.

--- a/airflow/files/supervisor.conf
+++ b/airflow/files/supervisor.conf
@@ -29,11 +29,24 @@ autorestart=true
 
 {% endif %}
 
-{% if service.name == "airflow_worker" %}
+{% if service.name == "airflow_worker_data" %}
 
 [program:{{ service.name }}]
 directory=/srv/airflow
-command=/srv/airflow/bin/start-service.sh "airflow worker"
+command=/srv/airflow/bin/start-service.sh "airflow worker -Q data -c 5,1"
+stdout_logfile=/var/log/airflow/worker.log
+stderr_logfile=/var/log/airflow/worker_error.log
+user=airflow
+autostart=true
+autorestart=true
+
+{% endif %}
+
+{% if service.name == "airflow_worker_default" %}
+
+[program:{{ service.name }}]
+directory=/srv/airflow
+command=/srv/airflow/bin/start-service.sh "airflow worker -Q default -c 5,1"
 stdout_logfile=/var/log/airflow/worker.log
 stderr_logfile=/var/log/airflow/worker_error.log
 user=airflow
