Make default with suffix.

--- a/airflow/files/supervisor.conf
+++ b/airflow/files/supervisor.conf
@@ -42,7 +42,7 @@ autorestart=true
 
 {% endif %}
 
-{% if service.name == "airflow_worker_default" %}
+{% if service.name == "airflow_worker" %}
 
 [program:{{ service.name }}]
 directory=/srv/airflow
