--- a/airflow/files/supervisor.conf
+++ b/airflow/files/supervisor.conf
@@ -31,7 +31,7 @@ autorestart=true
 
 {% if service.name == "airflow_worker" %}
 
-[program:{{ service.name }}_worker]
+[program:{{ service.type }}_worker]
 directory=/srv/airflow
 command=/srv/airflow/bin/start-service.sh "airflow worker"
 stdout_logfile=/var/log/airflow/worker.log
@@ -44,7 +44,7 @@ autorestart=true
 
 {% if service.name == "airflow_flower" %}
 
-[program:{{ service.name }}_flower]
+[program:{{ service.type }}_flower]
 directory=/srv/airflow
 command=/srv/airflow/bin/start-service.sh "airflow flower"
 stdout_logfile=/var/log/airflow/flower.log
