Add additional options to supervisor for better process handling.

--- a/airflow/files/supervisor.conf
+++ b/airflow/files/supervisor.conf
@@ -11,6 +11,8 @@ command=/srv/airflow/bin/start-service.sh "airflow webserver"
 stdout_logfile=/var/log/airflow/web.log
 stderr_logfile=/var/log/airflow/web_error.log
 user=airflow
+stopsignal=QUIT
+stopasgroup=true
 autostart=true
 autorestart=true
 
@@ -24,6 +26,8 @@ command=/srv/airflow/bin/start-service.sh "airflow scheduler"
 stdout_logfile=/var/log/airflow/scheduler.log 
 stderr_logfile=/var/log/airflow/scheduler_error.log
 user=airflow
+stopsignal=QUIT
+stopasgroup=true
 autostart=true
 autorestart=true
 
@@ -37,6 +41,8 @@ command=/srv/airflow/bin/start-service.sh "airflow worker"
 stdout_logfile=/var/log/airflow/worker.log
 stderr_logfile=/var/log/airflow/worker_error.log
 user=airflow
+stopsignal=QUIT
+stopasgroup=true
 autostart=true
 autorestart=true
 
@@ -50,6 +56,8 @@ command=/srv/airflow/bin/start-service.sh "airflow flower"
 stdout_logfile=/var/log/airflow/flower.log
 stderr_logfile=/var/log/airflow/flower_error.log
 user=airflow
+stopsignal=QUIT
+stopasgroup=true
 autostart=true
 autorestart=true
 
