--- a/airflow/files/requirements.txt
+++ b/airflow/files/requirements.txt
@@ -1,4 +1,5 @@
 celery==3.1.2
-airflow[s3, postgres, crypto, password, slack]
+airflow[s3, postgres, crypto, password, slack, gcp_api]
 lockfile==0.12.2
 redis
+google_compute_engine
