Correctly configure scheduler auto-restart

--- a/airflow/files/supervisor.conf
+++ b/airflow/files/supervisor.conf
@@ -22,8 +22,8 @@ autorestart=true
 
 [program:{{ service.type }}_scheduler]
 directory=/srv/airflow
-command=/srv/airflow/bin/start-service.sh "airflow scheduler"
-stdout_logfile=/var/log/airflow/scheduler.log 
+command=/srv/airflow/bin/start-service.sh "airflow scheduler --num_runs 10"
+stdout_logfile=/var/log/airflow/scheduler.log
 stderr_logfile=/var/log/airflow/scheduler_error.log
 user=airflow
 stopsignal=QUIT
