Configure scheduler auto-restart

--- a/airflow/files/supervisor.conf
+++ b/airflow/files/supervisor.conf
@@ -37,7 +37,7 @@ autorestart=true
 
 [program:{{ service.type }}_worker]
 directory=/srv/airflow
-command=/srv/airflow/bin/start-service.sh "airflow worker"
+command=/srv/airflow/bin/start-service.sh "airflow worker --num_runs 10"
 stdout_logfile=/var/log/airflow/worker.log
 stderr_logfile=/var/log/airflow/worker_error.log
 user=airflow
