Support storing logs on S3.

--- a/airflow/files/config.cfg
+++ b/airflow/files/config.cfg
@@ -15,10 +15,13 @@ base_log_folder = /var/log/airflow
 # must supply a remote location URL (starting with either 's3://...' or
 # 'gs://...') and an Airflow connection id that provides access to the storage
 # location.
-remote_base_log_folder =
-remote_log_conn_id =
+{%- if server.logging is defined and server.logging.remote is defined and server.logging.remote.enabled %}
+{% set remote = server.logging.remote %}
+remote_base_log_folder = {{ remote.directory }}
+remote_log_conn_id = {{ remote.connection_id }}
 # Use server-side encryption for logs stored in S3
-encrypt_s3_logs = False
+encrypt_s3_logs = {{ remote.get("encrypt", False)|python }}
+{%- endif %}
 # deprecated option for remote log storage, use remote_base_log_folder instead!
 # s3_log_folder =
 
