Make configurable pool size and recycle.

--- a/airflow/files/config.cfg
+++ b/airflow/files/config.cfg
@@ -39,12 +39,12 @@ sentry_dsn = {{ server.logging.dsn }}
 
 # The SqlAlchemy pool size is the maximum number of database connections
 # in the pool.
-sql_alchemy_pool_size = 5
+sql_alchemy_pool_size = {{ server.database.pool.size }}
 
 # The SqlAlchemy pool recycle is the number of seconds a connection
 # can be idle in the pool before it is invalidated. This config does
 # not apply to sqlite.
-sql_alchemy_pool_recycle = 3600
+sql_alchemy_pool_recycle = {{ server.database.pool.recycle }}
 
 # The amount of parallelism as a setting to the executor. This defines
 # the max number of task instances that should run simultaneously
